<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OpenDocument Reader</string>
    <string name="message_get_started"></string>
    <string name="toast_error_generic">Something bad happened. Couldn\'t open file.</string>
    <string name="toast_error_access_file">Couldn\'t access file.</string>
    <string name="toast_error_find_file">Couldn\'t find file. Maybe it doesn\'t exist any longer?</string>
    <string name="toast_error_illegal_file">This doesn\'t seem to be a supported file format.</string>
    <string name="toast_error_open_file">Couldn\'t open file. Only .odt and .ods documents are supported!</string>
    <string name="toast_error_out_of_memory">Phone out of memory! Too many pictures, or too big file.</string>
    <string name="toast_error_no_previous">No previous page available</string>
    <string name="toast_error_no_next">No next page available</string>
    <string name="toast_error_only_one_page">There\'s only one page</string>
    <string name="toast_error_password_protected">Document is password-protected</string>
    <string name="toast_error_storage">External storage not available. Couldn\'t read file.</string>
    <string name="toast_info_limited">Only parts of the document are being displayed in order to improve performance. Click here if you want to see the whole document</string>
    <string name="dialog_page_title">Pick a page</string>
    <string name="dialog_recent_title">Recent documents</string>
    <string name="dialog_submit_file_title">Choose an app to send us your file</string>
    <string name="dialog_submit_file">Do you want to send us the file so we can take a look and probably make it work with the next update?</string>
    <string name="dialog_no_filemanager">No file explorer found. We recommend one of these:</string>
    <string name="dialog_choose_filemanager">Open document via:</string>
    <string name="dialog_find_explorer">Find another file explorer</string>
    <string name="dialog_loading_title">Loading...</string>
    <string name="dialog_uploading_title">Uploading...</string>
    <string name="dialog_loading_message">This could take a few minutes, depending on the structure of your document and the processing power of your phone.</string>
    <string name="dialog_error_send_error_only">Send only the error</string>
    <string name="dialog_feedback_title">Shape the future of this app!</string>
    <string name="dialog_feedback_message">Don\'t like our approach to monetize this app? Hate the look and feel? Desperately looking for a specific feature? Please tell us about it on our feedback platform!</string>
    <string name="dialog_remove_ads_title">Purchase new features:</string>
    <string name="dialog_upload_file">We aren\'t able to open this document, because we don\'t support its format. Do you want to upload it to our server temporarily, so we can display it for you anyway?</string>
    <string name="title_choose_file_cloud">Choose file from cloud</string>
    <string name="title_choose_file_local">Choose file from device</string>
    <string name="menu_page_list">List pages</string>
    <string name="menu_page_next">Next</string>
    <string name="menu_page_previous">Previous</string>
    <string name="menu_search">Search</string>
    <string name="menu_open">Open</string>
    <string name="menu_edit">Edit</string>
    <string name="edit_save">Save</string>
    <string name="edit_help">Help!?</string>
    <string name="edit_banner">Edit your document below and press Save</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_about">About</string>
    <string name="menu_remove_ads">Feature Store</string>
    <string name="menu_reload">Reload without limit</string>
    <string name="menu_fullscreen">Fullscreen mode</string>
    <string name="menu_share">Share</string>
    <string name="menu_cloud_print">Print</string>
    <string name="crouton_error_billing">Failed to initialize Google Play In-App Billing</string>
    <string name="crouton_leave_fullscreen">Press Back to leave fullscreen mode</string>
    <string name="crouton_dismiss_chooser">Click here to get back to the document view</string>
    <string name="list_searching_documents">Searching for documents on your device... This could take some time.</string>
    <string name="list_no_documents_found">No documents found</string>
    <string name="find_previous">Previous</string>
    <string name="find_next">Next</string>
    <string name="find_on_page">Find on page</string>
    <string name="menu_tts">Text-To-Speech</string>
    <string name="tts_play">Play</string>
    <string name="tts_pause">Pause</string>
    <string name="tts_next">Next</string>
    <string name="tts_previous">Previous</string>
    <string name="consume_ad">Consuming an ad will remove them for a while. You can also remove them for a small fee</string>
    <string name="media_route_menu_title">External Display</string>
    <string name="chromecast_failed">Connection to Chromecast failed</string>
    <string name="crouton_purchase">This feature is only available to users who purchased a feature pack. Please purchase one first in the "Feature Store"</string>

    <string-array name="remove_ads_options">
        <item>remove ads for one year</item>
        <item>remove ads forever + support for modifying documents</item>
        <item>remove ads forever + support for modifying documents + deep love</item>
        <item>remove ads temporarily</item>
    </string-array>
        <string name="crouton_error_open_app">Couldn\'t open app.</string>

</resources>