<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_open"
        android:icon="@android:drawable/ic_menu_view"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_open"/>
    <item
        android:id="@+id/menu_search"
        android:icon="@android:drawable/ic_menu_search"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_search"/>
    <item
        android:id="@+id/menu_feedback"
        android:icon="@drawable/love"
        android:showAsAction="never"
        android:title="@string/menu_feedback"/>
    <item
        android:id="@+id/menu_remove_ads"
        android:icon="@drawable/love"
        android:showAsAction="never"
        android:title="@string/menu_remove_ads"/>
    <item
        android:id="@+id/menu_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:showAsAction="never"
        android:title="@string/menu_about"/>

</menu>